se crearon carpetas y archivos necesarios para el proyecto

--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!-- Aqui iria el contenido de la pagina -->
+    <h1>signup</h1>
     <form action="" method="post">
         <input type="text" placeholder="Username" name = "username">
         <input type="email" name="email" placeholder="Email">
@@ -15,5 +16,6 @@
         <input type="password" placeholder = "Password Confirm" name="password_confirm" name = "password_confirm">
         <input type="submit" value="Submit">
     </form>
+    <a href="./main.html""> pagina principal </a>
 </body>
 </html>
