--- a/login.html
+++ b/login.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <!-- Aqui iria el contenido de la pagina -->
+    <h1>login</h1>
     <form action="" method="post">
         <input type="text" placeholder="Username" name = "username">
         <input type="password" name="password" name = "password">
         <input type="submit" value="Submit">
     </form>
+    <a href="./main.html""> pagina principal </a>
 </body>
 </html>
