cambios sencillos haciendo prueba

--- a/main.html
+++ b/main.html
@@ -11,6 +11,14 @@
   <!-- ESAT AS LA PAGINA PRINCIPAL-->
   <h1> pagina principal </h1>
   <h2> Lite-Music </h2>
+  <section class="section__blocContainer">
+    <!-- esta etiqueta P solo es de prueba, luego se cambia -->
+    <p data-text="Awesome" class="button">
+      <span class="actual-text">&nbsp;bloc&nbsp;</span>
+      <span class="hover-text" aria-hidden="true">&nbsp;bloc&nbsp;</span>
+  </p>
+    <textarea class="textBloc" id="textBloc"></textarea>
+  </section>
   <div class="links" >
     <a href="./login.html"  > pagina de login </a>
     <a href="./signup.html"  > pagina de signup  </a>
