iniciarSesion agregando estilos

--- a/index.html
+++ b/index.html
@@ -13,15 +13,24 @@
   <!-- ESTA ES LA PAGINA PRINCIPAL-->
   <body>
     <header>
-      <h1>Lite-Music</h1>
-    </header>
-    <main>
-      <h1>pagina principal</h1>
-      <div class="links">
-        <a href="./iniciarSesion/iniciarSesion.html"> Iniciar Sesion </a>
-        <a href="./registrate/registrate.html"> Registrarse </a>
+      <div class="header-main">
+        <div class="logo">
+          <h1>LITE MUSIC</h1>
+        </div>
+        <div class="contenedor-links">
+          <div class="icono">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="links">
+            <a href="./iniciarSesion/iniciarSesion.html"> Iniciar Sesion </a>
+            <a href="./registrate/registrate.html"> Registrarse </a>
+          </div>
+        </div>
       </div>
-    </main>
+    </header>
+    <main></main>
     <footer></footer>
   </body>
 </html>
