--- a/iniciarSesion/iniciarSesion.html
+++ b/iniciarSesion/iniciarSesion.html
@@ -10,12 +10,19 @@
   </head>
   <body>
     <!-- Aqui iria el contenido de la pagina -->
-    <h1>Iniciar Sesion</h1>
-    <form action="" method="post">
-      <input type="text" placeholder="Username" name="username" />
-      <input type="password" name="password" name="password" />
-      <input type="submit" value="Submit" />
-    </form>
-    <a href="../index.html">Pagina Principal</a>
+    <header></header>
+    <main>
+      <section class="caja">
+        <h2 class="titulo">Iniciar Sesion</h2>
+        <form action="" method="post">
+          <input type="text" placeholder="Username" name="username" />
+          <input type="password" placeholder="contraseña" name="password" />
+          <button type="submit">Enviar</button>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <a href="../index.html">Pagina Principal</a>
+    </footer>
   </body>
 </html>
