--- a/registrate/registrate.html
+++ b/registrate/registrate.html
@@ -8,24 +8,49 @@
     <!-- css -->
     <link rel="stylesheet" href="registrate.css" />
   </head>
+  <!-- Aqui iria el contenido de la pagina -->
   <body>
-    <!-- Aqui iria el contenido de la pagina -->
-    <h1>Registrate</h1>
-    <form action="" method="post">
-      <input type="text" placeholder="Username" name="username" />
-      <input type="email" name="email" placeholder="Email" />
-      <input
-        type="password"
-        placeholder="Password"
-        name="password"
-        name="password" />
-      <input
-        type="password"
-        placeholder="Password Confirm"
-        name="password_confirm"
-        name="password_confirm" />
-      <input type="submit" value="Submit" />
-    </form>
-    <a href="../index.html"> pagina principal </a>
+    <header></header>
+    <main>
+      <section class="caja">
+        <h2 class="titulo">Registrate</h2>
+        <form action="" method="post">
+          <input
+            type="text"
+            placeholder="Usuario"
+            name="username"
+            autocomplete="username"
+            required />
+          <input
+            type="email"
+            name="email"
+            placeholder="Email"
+            autocomplete="email"
+            required />
+          <input
+            type="password"
+            placeholder="contraseña"
+            name="password"
+            autocomplete="current-password"
+            required />
+          <input
+            type="password"
+            placeholder="Confirmar Contraseña"
+            name="password_confirm"
+            autocomplete="current-password"
+            required />
+          <button type="submit">Enviar</button>
+          <div class="contenedor-ayuda">
+            <p class="ayuda">
+              ¿Ya tienes una cuenta?
+              <a href="../iniciarSesion/iniciarSesion.html">Iniciar Sesion</a>
+            </p>
+          </div>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <a href="../index.html">Pagina Principal</a>
+    </footer>
   </body>
 </html>
