--- a/registrate/registrate.html
+++ b/registrate/registrate.html
@@ -29,7 +29,7 @@
             required />
           <input
             type="password"
-            placeholder="contraseña"
+            placeholder="Contraseña"
             name="password"
             autocomplete="current-password"
             required />
