--- a/signup.html
+++ b/signup.html
@@ -16,6 +16,6 @@
         <input type="password" placeholder = "Password Confirm" name="password_confirm" name = "password_confirm">
         <input type="submit" value="Submit">
     </form>
-    <a href="./main.html""> pagina principal </a>
+    <a href="./main.html"> pagina principal </a>
 </body>
 </html>
