nuevos estilos azules

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,28 +10,33 @@
     <title>Lite-Music</title>
     <!-- css -->
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <!-- ESTA ES LA PAGINA PRINCIPAL-->
-  <body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<!-- ESTA ES LA PAGINA PRINCIPAL-->
+
+<body>
     <header>
-      <div class="header-main">
-        <div class="logo">
-          <h1>LITE MUSIC</h1>
+        <div class="header-main">
+            <div class="logo">
+                <h1><a href="index.html">LITE MUSIC</a></h1>
+            </div>
+            <div class="contenedor-links">
+                <div class="icono">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="links">
+                    <a href="./iniciarSesion/iniciarSesion.html"> Iniciar Sesion </a>
+                    <a href="./registrate/registrate.html"> Registrarse </a>
+                </div>
+            </div>
         </div>
-        <div class="contenedor-links">
-          <div class="icono">
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-          <div class="links">
-            <a href="./iniciarSesion/iniciarSesion.html"> Iniciar Sesion </a>
-            <a href="./registrate/registrate.html"> Registrarse </a>
-          </div>
-        </div>
-      </div>
     </header>
     <main></main>
     <footer></footer>
-  </body>
+</body>
+
 </html>
