Anadido fondo amarillo y cambiado la estructura del proyecto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow" />
     <title>Lite-Music</title>
     <!-- css -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -29,8 +29,8 @@
                     <div></div>
                 </div>
                 <div class="links">
-                    <a href="./iniciarSesion/iniciarSesion.html"> Iniciar Sesion </a>
-                    <a href="./registrate/registrate.html"> Registrarse </a>
+                    <a href="./login.html"> Iniciar Sesion </a>
+                    <a href="./signup.html"> Registrarse </a>
                 </div>
             </div>
         </div>
