--- a/login.html
+++ b/login.html
@@ -8,7 +8,9 @@
     <title>Iniciar Sesion</title>
     <!-- css -->
     <link rel="stylesheet" href="iniciarSesion.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/login-style.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +18,24 @@
 <!-- Aqui iria el contenido de la pagina -->
 
 <body>
-    <header></header>
+    <header>
+        <div class="header-main">
+            <div class="logo">
+                <h1><a href="index.html">LITE MUSIC</a></h1>
+            </div>
+            <div class="contenedor-links">
+                <div class="icono">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="links">
+                    <a href="./login.html"> Iniciar Sesion </a>
+                    <a href="./signup.html"> Registrarse </a>
+                </div>
+            </div>
+        </div>
+    </header>
     <main>
         <section class="caja">
             <h2 class="titulo">Iniciar Sesion</h2>
