--- a/registrate.html
+++ b/registrate.html
@@ -7,12 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registrate</title>
     <!-- css -->
-    <link rel="stylesheet" href="registrate.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style-signup.css" />
 </head>
 <!-- Aqui iria el contenido de la pagina -->
 
 <body>
-    <header></header>
+    <header>
+        <div class="header-main">
+            <div class="logo">
+                <h1><a href="index.html">LITE MUSIC</a></h1>
+            </div>
+            <div class="contenedor-links">
+                <div class="icono">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="links">
+                    <a href="./login.html"> Iniciar Sesion </a>
+                    <a href="./signup.html"> Registrarse </a>
+                </div>
+            </div>
+        </div>
+    </header>
     <main>
         <section class="caja">
             <h2 class="titulo">Registrate</h2>
