--- a/registrate.html
+++ b/registrate.html
@@ -43,7 +43,7 @@
                 <div class="contenedor-ayuda">
                     <p class="ayuda">
                         ¿Ya tienes una cuenta?
-                        <a href="../iniciarSesion/iniciarSesion.html">Iniciar Sesion</a>
+                        <a href="./login.html">Iniciar Sesion</a>
                     </p>
                 </div>
                 <footer>
