--- a/bloc.html
+++ b/bloc.html
@@ -4,9 +4,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/bloc-css/bloc-style.css">
   <title>Notas</title>
 </head>
 <body>
-  
+  <header>
+    <div class="header-main">
+        <div class="logo">
+            <h1><a href="index.html">LITE MUSIC</a></h1>
+        </div>
+        <div class="contenedor-links">
+            <div class="icono">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
+</header>
+  <main>
+    <section class="section__textarea--bloc" >
+      <header class="section__header--bloc" >
+        <div class="titulo--bloc" >
+          <input type="text" placeholder="titulo" >
+        </div>
+        <button class="button__header--guardar" id="buttonSaveBloc" >Save</button>
+      </header>
+      <textarea  class="textarea-bloc" name="" id="textarea-bloc"></textarea>
+    </section>
+  </main>
+  <script src="./js/main.js"></script>
 </body>
 </html>
