--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <a class="link-bloc" href="./bloc.html">NEW BLOC</a>
+    </main>
     <footer></footer>
 </body>
 
