--- a/bloc.html
+++ b/bloc.html
@@ -5,23 +5,28 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/bloc-css/bloc-style.css">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
   <title>Notas</title>
 </head>
 <body>
-  <header>
-    <div class="header-main">
-        <div class="logo">
-            <h1><a href="index.html">LITE MUSIC</a></h1>
-        </div>
-        <div class="contenedor-links">
-            <div class="icono">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </div>
-    </div>
-</header>
+	<header>	
+		  <div class="header-main">
+		            <div class="logo">
+		                <h1><a href="index.html">LITE MUSIC</a></h1>
+		            </div>
+		            <div class="contenedor-links">
+		                <div class="icono">
+		                    <div></div>
+		                    <div></div>
+		                    <div></div>
+		                </div>
+		                <div class="links">
+		                    <a href="./login.html"> Iniciar Sesion </a>
+		                    <a href="./signup.html"> Registrarse </a>
+		                </div>
+		            </div>
+		        </div>
+	</header>
   <main>
     <section class="section__textarea--bloc" >
       <header class="section__header--bloc" >
