nueva tarea indexado

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,35 +9,36 @@
     <title>Lite-Music</title>
     <!-- css -->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<!-- ESTA ES LA PAGINA PRINCIPAL-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet" />
+  </head>
+  <!-- ESTA ES LA PAGINA PRINCIPAL-->
 
-<body>
+  <body>
     <header>
-        <div class="header-main">
-            <div class="logo">
-                <h1><a href="index.html">LITE MUSIC</a></h1>
-            </div>
-            <div class="contenedor-links">
-                <div class="icono">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-                <div class="links">
-                    <a href="./login.html"> Iniciar Sesion </a>
-                    <a href="./signup.html"> Registrarse </a>
-                </div>
-            </div>
+      <div class="header-main">
+        <div class="logo">
+          <h1><a href="index.html">LITE MUSIC</a></h1>
         </div>
+        <div class="contenedor-links">
+          <div class="icono">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="links">
+            <a href="./login.html"> Iniciar Sesion </a>
+            <a href="./signup.html"> Registrarse </a>
+          </div>
+        </div>
+      </div>
     </header>
-    <main>
-        <a class="link-bloc" href="./bloc.html">NEW BLOC</a>
+    <main class="ir">
+      <a class="link-bloc" href="./block-de-notas/index.html">NUEVA TAREA</a>
     </main>
     <footer></footer>
-</body>
-
+  </body>
 </html>
