--- a/login.html
+++ b/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,51 +10,63 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/login-style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<!-- Aqui iria el contenido de la pagina -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet" />
+  </head>
+  <!-- Aqui iria el contenido de la pagina -->
 
-<body>
+  <body>
     <header>
-        <div class="header-main">
-            <div class="logo">
-                <h1><a href="index.html">LITE MUSIC</a></h1>
-            </div>
-            <div class="contenedor-links">
-                <div class="icono">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-                <div class="links">
-                    <a href="./login.html"> Iniciar Sesion </a>
-                    <a href="./signup.html"> Registrarse </a>
-                </div>
-            </div>
+      <div class="header-main">
+        <div class="logo">
+          <h1><a href="index.html">LITE MUSIC</a></h1>
         </div>
+        <div class="contenedor-links">
+          <div class="icono">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="links">
+            <a href="./login.html"> Iniciar Sesion </a>
+            <a href="./signup.html"> Registrarse </a>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
-        <section class="caja">
-            <h2 class="titulo">Iniciar Sesion</h2>
-            <form action="" method="post">
-                <input id="user" type="text" placeholder="Usuario" name="username" autocomplete="username" required />
-                <input id="password" type="password" placeholder="Contraseña" name="password" autocomplete="current-password" required />
-                <button type="submit">Enviar</button>
-                <div class="contenedor-ayuda">
-                    <p class="ayuda">
-                        ¿Aun no tienes una cuenta?
-                        <a href="../registrate/registrate.html">Registrate</a>
-                    </p>
-                </div>
-                <footer>
-                    <a href="../index.html">Pagina Principal</a>
-                </footer>
-            </form>
-        </section>
+      <section class="caja">
+        <h2 class="titulo">Iniciar Sesion</h2>
+        <form action="" method="post">
+          <input
+            id="user"
+            type="text"
+            placeholder="Usuario"
+            name="username"
+            autocomplete="username"
+            required />
+          <input
+            id="password"
+            type="password"
+            placeholder="Contraseña"
+            name="password"
+            autocomplete="current-password"
+            required />
+          <button type="submit">Enviar</button>
+          <div class="contenedor-ayuda">
+            <p class="ayuda">
+              ¿Aun no tienes una cuenta?
+              <a href="./signup.html">Registrate</a>
+            </p>
+          </div>
+          <footer>
+            <a href="../index.html">Pagina Principal</a>
+          </footer>
+        </form>
+      </section>
     </main>
-
-</body>
-
+  </body>
 </html>
