Mejorado el index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,23 @@
         </div>
     </header>
     <main>
-        <a class="link-bloc" href="./bloc.html">NEW BLOC</a>
+        <button>New</button>
+        <div>
+            <input type="checkbox" name="" id="">
+            <a href="#">Archivo random de prueba</a>
+        </div>
+        <div>
+            <input type="checkbox" name="" id="">
+            <a href="#">Archivo random de prueba</a>
+        </div>
+        <div>
+            <input type="checkbox" name="" id="">
+            <a href="#">Archivo random de prueba</a>
+        </div>
+        <div>
+            <input type="checkbox" name="" id="">
+            <a href="#">Archivo random de prueba</a>
+        </div>
     </main>
     <footer></footer>
 </body>
