--- a/index.html
+++ b/index.html
@@ -37,22 +37,24 @@
       </div>
     </header>
     <main>
-      <button>New</button>
-      <div>
-        <input type="checkbox" name="" id="" />
-        <a href="#">Archivo random de prueba</a>
-      </div>
-      <div>
-        <input type="checkbox" name="" id="" />
-        <a href="#">Archivo random de prueba</a>
-      </div>
-      <div>
-        <input type="checkbox" name="" id="" />
-        <a href="#">Archivo random de prueba</a>
-      </div>
-      <div>
-        <input type="checkbox" name="" id="" />
-        <a href="#">Archivo random de prueba</a>
+      <button class="boton-new">Nuevo archivo</button>
+      <div class="contenedor-archivos">
+        <div>
+          <input type="checkbox" name="" id="" />
+          <a href="#">Archivo random de prueba</a>
+        </div>
+        <div>
+          <input type="checkbox" name="" id="" />
+          <a href="#">Archivo random de prueba</a>
+        </div>
+        <div>
+          <input type="checkbox" name="" id="" />
+          <a href="#">Archivo random de prueba</a>
+        </div>
+        <div>
+          <input type="checkbox" name="" id="" />
+          <a href="#">Archivo random de prueba</a>
+        </div>
       </div>
     </main>
     <footer></footer>
