--- a/index.html
+++ b/index.html
@@ -37,8 +37,16 @@
       </div>
     </header>
     <main>
-      <button class="boton-new">Nuevo archivo</button>
+      <a class="rainbow-button" alt="Nuevo archivo"></a>
       <div class="contenedor-archivos">
+        <div>
+          <input type="checkbox" name="" id="" />
+          <a href="#">Archivo random de prueba</a>
+        </div>
+        <div>
+          <input type="checkbox" name="" id="" />
+          <a href="#">Archivo random de prueba</a>
+        </div>
         <div>
           <input type="checkbox" name="" id="" />
           <a href="#">Archivo random de prueba</a>
