Agregado funcionalidad de borrar renome en frontend

--- a/index.html
+++ b/index.html
@@ -39,32 +39,11 @@
     <main>
       <a class="rainbow-button" alt="Nuevo archivo"></a>
       <div class="contenedor-archivos">
-        <div>
-          <input type="checkbox" name="" id="" />
-          <a href="#">Archivo random de prueba</a>
-        </div>
-        <div>
-          <input type="checkbox" name="" id="" />
-          <a href="#">Archivo random de prueba</a>
-        </div>
-        <div>
-          <input type="checkbox" name="" id="" />
-          <a href="#">Archivo random de prueba</a>
-        </div>
-        <div>
-          <input type="checkbox" name="" id="" />
-          <a href="#">Archivo random de prueba</a>
-        </div>
-        <div>
-          <input type="checkbox" name="" id="" />
-          <a href="#">Archivo random de prueba</a>
-        </div>
-        <div>
-          <input type="checkbox" name="" id="" />
-          <a href="#">Archivo random de prueba</a>
-        </div>
+        
+        
       </div>
     </main>
     <footer></footer>
   </body>
+  <script src="js/main.js"></script>
 </html>
